--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -135,6 +135,16 @@
                             <ComboBoxItem Content="Michael 3" Uid="11"/>
                         </ComboBox>
                     </DockPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="190"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="105"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Program Identifier" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" Grid.Column="0" />
+                        <TextBox Name="UniqueProgramID" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" IsEnabled="False" Grid.Column="1" />
+                        <Button x:Name="RegenerateUniqueProgramIDButton" Content="Regenerate" Margin="0,10,10,10" Click="RegenerateUniqueProgramIDButton_Click" Grid.Column="2" />
+                    </Grid>
                     <DockPanel>
                         <TextBlock Text="Registration Server Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                         <TextBox Name="RegistrationServerNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
