--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -573,6 +573,17 @@
                             Unchecked="remoteControllerSwitch_Unchecked"
                             Visibility="Collapsed"
                             />
+                        <ui:Button
+                            x:Name="ReaderMessageButton"
+                            Click="ReaderMessageButton_Click"
+                            Visibility="Collapsed"
+                            >
+                            <ui:InfoBadge 
+                                x:Name="ReaderMessageNumberBox"
+                                Severity="Caution"
+                                Value="0"
+                                />
+                        </ui:Button>
                         <TextBlock 
                             x:Name="remoteErrorsBlock"
                             Margin="0,0,5,0"
