--- a/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
@@ -31,33 +31,33 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <ListView 
-                    x:Name="updateListView" 
-                    VerticalAlignment="Stretch" 
-                    HorizontalAlignment="Stretch"
-                    VerticalContentAlignment="Top"
-                    SelectionMode="Extended" 
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                    Grid.Row="1"
-                    AlternationCount="2"
-                    ItemContainerStyle="{StaticResource alternatingStyle}"
-                    Margin="0,0,0,0"
-                    Loaded="updateListView_Loaded"
-                    >
+                x:Name="updateListView"
+                VerticalContentAlignment="Top"
+                SelectionMode="Extended" 
+                FontSize="12"
+                ScrollViewer.CanContentScroll="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                ScrollViewer.ScrollChanged="updateListView_ScrollChanged"
+                Grid.Row="1"
+                AlternationCount="2"
+                ItemContainerStyle="{StaticResource alternatingStyle}"
+                Margin="0,0,0,0"
+                Loaded="updateListView_Loaded"
+                >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="40"/>
-                                <ColumnDefinition Width="80"/>
-                                <ColumnDefinition Width="80"/>
-                                <ColumnDefinition Width="60"/>
-                                <ColumnDefinition Width="140"/>
-                                <ColumnDefinition Width="160"/>
-                                <ColumnDefinition Width="100"/>
-                                <ColumnDefinition Width="100"/>
-                                <ColumnDefinition Width="60"/>
+                                <ColumnDefinition Width="60"/>  <!-- Box -->
+                                <ColumnDefinition Width="80"/>  <!-- Location Name -->
+                                <ColumnDefinition Width="80"/>  <!-- Chip Number -->
+                                <ColumnDefinition Width="60"/>  <!-- Bib -->
+                                <ColumnDefinition Width="140"/> <!-- Name -->
+                                <ColumnDefinition Width="170"/> <!-- Clock Time -->
+                                <ColumnDefinition Width="100"/> <!-- Net Time -->
+                                <ColumnDefinition Width="100"/> <!-- Status -->
+                                <ColumnDefinition Width="100"/> <!-- Type -->
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Box}"/>
                             <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding LocationName}"/>
@@ -72,28 +72,37 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Grid Margin="5,0,0,0" Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="40"/>
-                    <ColumnDefinition Width="80"/>
-                    <ColumnDefinition Width="80"/>
-                    <ColumnDefinition Width="60"/>
-                    <ColumnDefinition Width="140"/>
-                    <ColumnDefinition Width="160"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="60"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Margin="4,4" Text="Box"/>
-                <TextBlock Grid.Column="1" Margin="4,4" Text="Location"/>
-                <TextBlock Grid.Column="2" Margin="4,4" Text="Chip"/>
-                <TextBlock Grid.Column="3" Margin="4,4" Text="Bib"/>
-                <TextBlock Grid.Column="4" Margin="4,4" Text="Name"/>
-                <TextBlock Grid.Column="5" Margin="4,4" Text="Clock"/>
-                <TextBlock Grid.Column="6" Margin="4,4" Text="Net Time"/>
-                <TextBlock Grid.Column="7" Margin="4,4" Text="Status"/>
-                <TextBlock Grid.Column="8" Margin="4,4" Text="Type"/>
-            </Grid>
+            <ScrollViewer
+                x:Name="labelsViewer"
+                Grid.Row="0"
+                Margin="0,0,0,0"
+                CanContentScroll="False"
+                HorizontalScrollBarVisibility="Hidden"
+                VerticalScrollBarVisibility="Disabled"
+                >
+                <Grid Margin="7,0" Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="60"/>  <!-- Box -->
+                        <ColumnDefinition Width="80"/>  <!-- Location Name -->
+                        <ColumnDefinition Width="80"/>  <!-- Chip Number -->
+                        <ColumnDefinition Width="60"/>  <!-- Bib -->
+                        <ColumnDefinition Width="140"/> <!-- Name -->
+                        <ColumnDefinition Width="170"/> <!-- Clock Time -->
+                        <ColumnDefinition Width="100"/> <!-- Net Time -->
+                        <ColumnDefinition Width="100"/> <!-- Status -->
+                        <ColumnDefinition Width="100"/> <!-- Type -->
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Margin="4,4" Text="Box"/>
+                    <TextBlock Grid.Column="1" Margin="4,4" Text="Location"/>
+                    <TextBlock Grid.Column="2" Margin="4,4" Text="Chip"/>
+                    <TextBlock Grid.Column="3" Margin="4,4" Text="Bib"/>
+                    <TextBlock Grid.Column="4" Margin="4,4" Text="Name"/>
+                    <TextBlock Grid.Column="5" Margin="4,4" Text="Clock"/>
+                    <TextBlock Grid.Column="6" Margin="4,4" Text="Net Time"/>
+                    <TextBlock Grid.Column="7" Margin="4,4" Text="Status"/>
+                    <TextBlock Grid.Column="8" Margin="4,4" Text="Type"/>
+                </Grid>
+            </ScrollViewer>
         </Grid>
         <DockPanel Grid.Row="1" LastChildFill="False" VerticalAlignment="Center" HorizontalAlignment="Center">
             <CheckBox x:Name="onlyManualBox" Content="Show Only Manual Reads" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="16" Margin="5,5,5,5" Unchecked="onlyManualBox_Unchecked" Checked="onlyManualBox_Unchecked"/>
