--- a/ChronoKeep/UI/Timing/TimingResultsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingResultsPage.xaml
@@ -22,7 +22,7 @@
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25" />
+            <RowDefinition Height="28" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <ListView
@@ -35,7 +35,8 @@
             FontSize="12" 
             MouseDoubleClick="UpdateListView_MouseDoubleClick"
             ScrollViewer.CanContentScroll="True"
-            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+            ScrollViewer.ScrollChanged="updateListView_ScrollChanged"
             Grid.Row="1"
             AlternationCount="2"
             ItemContainerStyle="{StaticResource alternatingStyle}"
@@ -45,8 +46,8 @@
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="80"/>  <!-- Location -->
-                            <ColumnDefinition Width="30"/>  <!-- Occurence -->
+                            <ColumnDefinition Width="90"/>  <!-- Location -->
+                            <ColumnDefinition Width="32"/>  <!-- Occurence -->
                             <ColumnDefinition Width="140"/> <!-- System Time -->
                             <ColumnDefinition Width="90"/>  <!-- Time -->
                             <ColumnDefinition Width="90"/>  <!-- Chip Time -->
@@ -57,9 +58,9 @@
                             <ColumnDefinition Width="40"/>  <!-- Gender Place -->
                             <ColumnDefinition Width="60"/>  <!-- Age Group -->
                             <ColumnDefinition Width="40"/>  <!-- Age Group Place -->
-                            <ColumnDefinition Width="90"/>  <!-- Distance -->
+                            <ColumnDefinition Width="110"/>  <!-- Distance -->
                             <ColumnDefinition Width="20"/>  <!-- Type -->
-                            <ColumnDefinition Width="80"/>  <!-- Segment -->
+                            <ColumnDefinition Width="120"/>  <!-- Segment -->
                         </Grid.ColumnDefinitions>
                         <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding LocationName}" />
                         <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding Occurrence}" />
@@ -80,39 +81,50 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Grid Margin="5,0" Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80"/>  <!-- Location -->
-                <ColumnDefinition Width="30"/>  <!-- Occurence -->
-                <ColumnDefinition Width="140"/> <!-- System Time -->
-                <ColumnDefinition Width="90"/>  <!-- Time -->
-                <ColumnDefinition Width="90"/>  <!-- Chip Time -->
-                <ColumnDefinition Width="50"/>  <!-- Bib -->
-                <ColumnDefinition Width="130"/> <!-- Name -->
-                <ColumnDefinition Width="40"/>  <!-- Place -->
-                <ColumnDefinition Width="25"/>  <!-- Gender -->
-                <ColumnDefinition Width="40"/>  <!-- Gender Place -->
-                <ColumnDefinition Width="60"/>  <!-- Age Group -->
-                <ColumnDefinition Width="40"/>  <!-- Age Group Place -->
-                <ColumnDefinition Width="90"/>  <!-- Distance -->
-                <ColumnDefinition Width="20"/>  <!-- Type -->
-                <ColumnDefinition Width="80"/>  <!-- Segment -->
-            </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Margin="4,4" Text="Loc"/>
-            <TextBlock Grid.Column="1" Margin="4,4" Text="Occ"/>
-            <TextBlock Grid.Column="2" Margin="4,4" Text="System Time"/>
-            <TextBlock Grid.Column="3" Margin="4,4" Text="Time"/>
-            <TextBlock Grid.Column="4" Margin="4,4" Text="Chip Time" x:Name="ChipTimeHeader"/>
-            <TextBlock Grid.Column="5" Margin="4,4" Text="Bib"/>
-            <TextBlock Grid.Column="6" Margin="4,4" Text="Name"/>
-            <TextBlock Grid.Column="7" Margin="4,4" Text="Pl" x:Name="placeText"/>
-            <TextBlock Grid.Column="8" Margin="4,4" Text="G"/>
-            <TextBlock Grid.Column="9" Margin="4,4" Text="GP" x:Name="genderPlaceText"/>
-            <TextBlock Grid.Column="10" Margin="4,4" Text="Age Grp"/>
-            <TextBlock Grid.Column="11" Margin="4,4" Text="AP" x:Name="agePlaceText"/>
-            <TextBlock Grid.Column="12" Margin="4,4" Text="Distance"/>
-            <TextBlock Grid.Column="13" Margin="4,4" Text="T"/>
-            <TextBlock Grid.Column="14" Margin="4,4" Text="Segment"/>
-        </Grid>
+        <ScrollViewer
+            x:Name="labelsViewer"
+            Grid.Row="0"
+            Margin="0,0,0,0"
+            CanContentScroll="True"
+            HorizontalScrollBarVisibility="Hidden"
+            VerticalScrollBarVisibility="Disabled"
+            >
+            <Grid
+                Margin="7,0"
+                >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="90"/>  <!-- Location -->
+                    <ColumnDefinition Width="32"/>  <!-- Occurence -->
+                    <ColumnDefinition Width="140"/> <!-- System Time -->
+                    <ColumnDefinition Width="90"/>  <!-- Time -->
+                    <ColumnDefinition Width="90"/>  <!-- Chip Time -->
+                    <ColumnDefinition Width="50"/>  <!-- Bib -->
+                    <ColumnDefinition Width="130"/> <!-- Name -->
+                    <ColumnDefinition Width="40"/>  <!-- Place -->
+                    <ColumnDefinition Width="25"/>  <!-- Gender -->
+                    <ColumnDefinition Width="40"/>  <!-- Gender Place -->
+                    <ColumnDefinition Width="60"/>  <!-- Age Group -->
+                    <ColumnDefinition Width="40"/>  <!-- Age Group Place -->
+                    <ColumnDefinition Width="110"/>  <!-- Distance -->
+                    <ColumnDefinition Width="20"/>  <!-- Type -->
+                    <ColumnDefinition Width="120"/>  <!-- Segment -->
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Margin="4,4" Text="Loc"/>
+                <TextBlock Grid.Column="1" Margin="4,4" Text="Occ"/>
+                <TextBlock Grid.Column="2" Margin="4,4" Text="System Time"/>
+                <TextBlock Grid.Column="3" Margin="4,4" Text="Time"/>
+                <TextBlock Grid.Column="4" Margin="4,4" Text="Chip Time" x:Name="ChipTimeHeader"/>
+                <TextBlock Grid.Column="5" Margin="4,4" Text="Bib"/>
+                <TextBlock Grid.Column="6" Margin="4,4" Text="Name"/>
+                <TextBlock Grid.Column="7" Margin="4,4" Text="Pl" x:Name="placeText"/>
+                <TextBlock Grid.Column="8" Margin="4,4" Text="G"/>
+                <TextBlock Grid.Column="9" Margin="4,4" Text="GP" x:Name="genderPlaceText"/>
+                <TextBlock Grid.Column="10" Margin="4,4" Text="Age Grp"/>
+                <TextBlock Grid.Column="11" Margin="4,4" Text="AP" x:Name="agePlaceText"/>
+                <TextBlock Grid.Column="12" Margin="4,4" Text="Distance"/>
+                <TextBlock Grid.Column="13" Margin="4,4" Text="T"/>
+                <TextBlock Grid.Column="14" Margin="4,4" Text="Segment"/>
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </Page>
