Fixed an issue where the readers panel would scroll farther than intended when using the mouse wheel effectively hiding readers if the user didn't realize this.

--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -597,7 +597,7 @@
                     HorizontalAlignment="Stretch"
                     KeyboardNavigation.TabNavigation="Continue"
                     Height="170"
-                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.CanContentScroll="false"
                     ScrollViewer.VerticalScrollBarVisibility="Visible"
                     >
                     <ListBox.ItemContainerStyle>
